MyFrame clonato (e altre cosette (namespace,ecc))

--- a/ProvaGestITFSharp/ProvaGestITFSharp/ProvaGestITFSharp.fsproj
+++ b/ProvaGestITFSharp/ProvaGestITFSharp/ProvaGestITFSharp.fsproj
@@ -9,8 +9,9 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ProvaGestITFSharp</RootNamespace>
     <AssemblyName>ProvaGestITFSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Name>ProvaGestITFSharp</Name>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -36,6 +37,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="GestIT_FSharp">
       <HintPath>..\..\GestIT_FSharp\GestIT_FSharp\bin\Debug\GestIT_FSharp.dll</HintPath>
     </Reference>
@@ -43,13 +47,9 @@
       <HintPath>..\..\..\..\..\Desktop\Leap_Developer_Kit_0.7.6_3012_Windows\LeapSDK\lib\LeapCSharp.NET3.5.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
