Divise applicazioni in 2 progetti
Aggiunto PC come giocatore a Rock Paper Scissor
Aggiunto check velocità durante navigazione a Menu Win8

--- a/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
+++ b/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
@@ -10,7 +10,7 @@
     <RootNamespace>LeapTrayApplication</RootNamespace>
     <AssemblyName>LeapTrayApplication</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <Name>LeapTrayApplication</Name>
+    <Name>LeapTrayApplication - menu Win8</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
