--- a/LeapTrayApplication - Rock Paper Scissor/LeapTrayApplication/LeapTrayApplication - rock paper scissor.fsproj
+++ b/LeapTrayApplication - Rock Paper Scissor/LeapTrayApplication/LeapTrayApplication - rock paper scissor.fsproj
@@ -50,7 +50,7 @@
     <None Include="Leapd.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Compile Include="LeapTrayApplication.fs" />
+    <Compile Include="LeapRPS.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GestIT_FSharp">
