Migliora gesture 2 mani + alcune aggiunte useless

--- a/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
+++ b/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
@@ -50,7 +50,7 @@
     <None Include="Leapd.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Compile Include="LeapTrayApplication.fs" />
+    <Compile Include="MenuWin.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GestIT_FSharp">
