--- a/LeapTrayApplication - Rock Paper Scissor/LeapTrayApplication/LeapTrayApplication - rock paper scissor.fsproj
+++ b/LeapTrayApplication - Rock Paper Scissor/LeapTrayApplication/LeapTrayApplication - rock paper scissor.fsproj
@@ -18,7 +18,7 @@
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;TRUE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DocumentationFile>bin\Debug\LeapTrayApplication.XML</DocumentationFile>
