--- a/AppJetpackJoyride/AppJetpackJoyride/AppJetpackJoyride.fsproj
+++ b/AppJetpackJoyride/AppJetpackJoyride/AppJetpackJoyride.fsproj
@@ -37,10 +37,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GestIT_FSharp">
-      <HintPath>..\..\GestIT_FSharp\GestIT_FSharp\bin\Debug\GestIT_FSharp.dll</HintPath>
+      <HintPath>..\..\GestIT_FSharp\LeapDriver\bin\Debug\GestIT_FSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeapCSharp.NET3.5">
       <HintPath>..\..\..\..\..\Desktop\Leap_Developer_Kit_0.7.6_3012_Windows\LeapSDK\lib\LeapCSharp.NET3.5.dll</HintPath>
+    </Reference>
+    <Reference Include="LeapDriver">
+      <HintPath>..\..\GestIT_FSharp\LeapDriver\bin\Debug\LeapDriver.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -53,10 +56,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="LeapCSharp.dll" />
-    <None Include="Leapd.dll" />
-    <None Include="Leap.dll" />
     <Compile Include="Program.fs" />
+    <None Include="LeapCSharp.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Leapd.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Leap.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
