--- a/GestIT_FSharp/LeapDriver/LeapDriver.fsproj
+++ b/GestIT_FSharp/LeapDriver/LeapDriver.fsproj
@@ -5,13 +5,12 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>75b1878d-0959-4351-9be5-775a7b1a1021</ProjectGuid>
+    <ProjectGuid>480058eb-44e6-4ba1-a7fa-facdfd1d2400</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>GestIT_FSharp</RootNamespace>
-    <AssemblyName>GestIT_FSharp</AssemblyName>
+    <RootNamespace>LeapDriver</RootNamespace>
+    <AssemblyName>LeapDriver</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <Name>GestIT_FSharp</Name>
-    <TargetFrameworkProfile />
+    <Name>LeapDriver</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,8 +20,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\GestIT_FSharp.XML</DocumentationFile>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <DocumentationFile>bin\Debug\LeapDriver.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,24 +29,33 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\GestIT_FSharp.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\LeapDriver.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
-    <Compile Include="GestIT_Library.fs" />
-    <Compile Include="PlaybackSensor.fs" />
-    <None Include="TestSerialization.fsx" />
+    <Compile Include="ClonableFrame.fs" />
+    <Compile Include="Driver.fs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="LeapCSharp.NET3.5">
+      <HintPath>..\..\..\..\..\Desktop\Leap_Developer_Kit_0.7.9_3460_Windows\LeapSDK\lib\LeapCSharp.NET3.5.dll</HintPath>
+    </Reference>
+    <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
-    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Windows.Forms" />
+    <ProjectReference Include="..\GestIT_FSharp\GestIT_FSharp.fsproj">
+      <Name>GestIT_FSharp</Name>
+      <Project>{75b1878d-0959-4351-9be5-775a7b1a1021}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
