--- a/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
+++ b/LeapTrayApplication - menu Win8/LeapTrayApplication/LeapTrayApplication - menu Win8.fsproj
@@ -41,9 +41,6 @@
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.0\Framework\v4.0\Microsoft.FSharp.Targets')" />
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Leap.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Include="LeapCSharp.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -51,13 +48,19 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <Compile Include="MenuWin.fs" />
+    <None Include="Leap.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="GestIT_FSharp">
-      <HintPath>C:\Users\Pc\Documents\Visual Studio 2012\Projects\GestIT_FSharp\GestIT_FSharp\bin\Debug\GestIT_FSharp.dll</HintPath>
+      <HintPath>..\..\GestIT_FSharp\LeapDriver\bin\Debug\GestIT_FSharp.dll</HintPath>
     </Reference>
     <Reference Include="LeapCSharp.NET3.5">
-      <HintPath>..\..\..\..\..\Desktop\Leap_Developer_Kit_0.7.6_3012_Windows\LeapSDK\lib\LeapCSharp.NET3.5.dll</HintPath>
+      <HintPath>..\..\..\..\..\Desktop\Leap_Developer_Kit_0.7.9_3460_Windows\LeapSDK\lib\LeapCSharp.NET3.5.dll</HintPath>
+    </Reference>
+    <Reference Include="LeapDriver">
+      <HintPath>..\..\GestIT_FSharp\LeapDriver\bin\Debug\LeapDriver.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
