Introdotte modifiche alle reti
RPS e Menu8: modificate le reti con i nuovi operatori fsharp. In
particolare, RPS ha due esempi dimostrativi in quanto sarà da pubblicare
su Git.

--- a/GestIT_FSharp/GestIT_FSharp/GestIT_FSharp.fsproj
+++ b/GestIT_FSharp/GestIT_FSharp/GestIT_FSharp.fsproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="GestIT_Library.fs" />
     <Compile Include="PlaybackSensor.fs" />
+    <Compile Include="Utils.fs" />
     <None Include="TestSerialization.fsx" />
   </ItemGroup>
   <ItemGroup>
