--- a/GestIT_FSharp/LeapDriver/LeapDriver.fsproj
+++ b/GestIT_FSharp/LeapDriver/LeapDriver.fsproj
@@ -49,6 +49,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Windows.Forms" />
     <ProjectReference Include="..\GestIT_FSharp\GestIT_FSharp.fsproj">
